Get tests working with a mini-cluster